@startuml
' skinparam linetype ortho

entity "Product" as product {
  *id : number <<generated>>
  *creationDate : date
  --
  *seller : number <<FK>>
  *productDetailsId : number <<FK>>
  *quantity : number
}

entity "ProductDetails" as productDetails {
  *id : number <<generated>>
  *creationDate : date
  --
  *name : string
  *description : string
  *imageUrl : string
  *price : Price
}

entity "ConcreteProduct" as concreteProduct {
  *id : number <<generated>>
  *creationDate : date
  --
  *productDetailsId : number <<FK>>
  *status : ConcreteProductStatus
}

entity "ProductDetails_Category" as productDetails_Category {
  *id : number <<generated>>
  --
  *productDetailsId : number <<FK>>
  *categoryId : number <<FK>>
}

entity "ProductDetails_Tag" as productDetails_Tag {
  *id : number <<generated>>
  --
  *productDetailsId : number <<FK>>
  *tagId : number <<FK>>
}

entity "Tag" as tag {
  *id : number <<generated>>
  --
  *name : string
}

entity "Category" as category {
  *id : number <<generated>>
  --
  *name : string
}

entity "Review" as review {
  *id : number <<generated>>
  *creationDate : date
  *updateDate : date
  --
  *fiveStarScore : FiveStarScore
  *description : string
}

entity "Review_Product" as review_Product {
  *id : number <<generated>>
  --
  *reviewId : number <<FK>>
  *concreteProductId : number <<FK>>
}

entity "Review_User" as review_User {
  *id : number <<generated>>
  --
  *reviewId : number <<FK>>
  *userId : number <<FK>>
}

entity "User" as user {
  *id : number <<generated>>
  *creationDate : date
  --
  *username : string
  *avgFiveStarScore : FiveStarScore
}

entity "Order" as order {
  *id : number <<generated>>
  *creationDate : date
  *updateDate : date
  --
  *concreteProductId : number <<FK>>
  *price : Price
  *sellerId : number <<FK>>
  *buyerId : number <<FK>>
  *address : Address
  *status : OrderStatus
}

productDetails_Tag ||--|| tag
productDetails_Tag ||--|| productDetails
productDetails_Category ||--|| category
productDetails_Category ||--|| productDetails
productDetails ||--|| product

review_Product ||--|| concreteProduct
review_User ||--|| user
review ||--|| review_User
review ||--|| review_Product

order ||--|| user
product ||--|| user

concreteProduct ||--|| productDetails
concreteProduct ||--|| order
@enduml
